# blur

./: AGENTS.md  CLAUDE.md  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
blur/: __init__.py  __main__.py  clipboard.py  image.py  main.py  martian.txt  text.py  video.py
